--- a/BookStore/Views/Book/DetailBook.cshtml
+++ b/BookStore/Views/Book/DetailBook.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Detail Page";
+}
+
+
 <section id="services" class="services product" style="padding: 6.5rem 0">
     <div class="container-fluid">
         <div class="row row-sm">
