--- a/BookStore/Views/UserOrder/UserOrders.cshtml
+++ b/BookStore/Views/UserOrder/UserOrders.cshtml
@@ -1,6 +1,9 @@
 ﻿@model IEnumerable<Order>
+
 @{
+    ViewData["Title"] = "Order Page";
 }
+
 <div style="width:85%; padding: 7rem 0" class="m-auto">
     <a href="/" class="btn btn-dark my-2">Back</a>
 
